# Vendetta

./: .gitignore  CLAUDE.md  CLAUDE.md.bak  MODULAR_PLAN.md  api_server.py  api_server.py.bak  auth_manager.py  bypass_403.py  clickjacking_test.py  db_manager.py  dir_fuzzer.py  ecosystem.config.cjs  exploit_demo.py  form_analyzer.py  full_scan.py  load_test_engine.py  logs  pyproject.toml  rate_limiter.py  recon.py  replit.md  report_generator.py  requirements-runtime.txt  requirements.txt  slowloris.py  sslstrip_sim.py  streamlit_app.py  subdomain_enum.py  template_engine.py  url_validator.py  vendetta.db  xss_test.py
.claude/: settings.json  settings.local.json
_deprecated/: README.md  main.py.bak
core/: README.md  __init__.py  auth.py  rate_limiter.py
load_test/: .env.example  README.md  load_test_engine.py  requirements.txt
logs/: session-20260407-133001-d9c82c7e.json  session-20260407-133001-ed2bd458.json  session-20260407-173001-216a8792.json  session-20260407-183001-216a8792.json  session-20260408-113001-216a8792.json
security_tools/: .gitignore  README.md  clickjacking_test.html  (+3 more)
web_audit_safe/: .gitignore  README.md  pyproject.toml  requirements.txt
web_audit_safe/output_diaz/: report.json  report.md
web_audit_safe/output_diaz/evidence/: response_0000.txt
web_audit_safe/src/web_audit_safe/: __init__.py  __main__.py  cli.py  crawler.py  report.py  utils.py
web_audit_safe/src/web_audit_safe/checks/: __init__.py  cookies.py  cors.py  exposure.py  forms.py  headers.py  tls.py
web_audit_safe/tests/: __init__.py  test_checks.py  test_utils.py
(+48 files in other folders)
