[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
]
