[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-audit-safe"
version = "1.0.0"
description = "Herramienta de auditoría de seguridad pasiva para aplicaciones web"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Blue Team Security", email = "security@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "urllib3>=2.0.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
web-audit-safe = "web_audit_safe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_audit_safe*"]

